plugins {
	id 'java'
	id 'jacoco'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
	compileOnly group: 'net.runelite', name:'flatlaf-extras', version: '3.2.5-rl4'

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.12'
	testImplementation 'org.mockito:mockito-core:4.11.0'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'com.splitmanager'
version = '1.0-SNAPSHOT'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

jacoco {
	toolVersion = '0.8.12'
}

def jacocoUnitTestExcludes = [
	'com/splitmanager/ManagerPlugin*',
	'com/splitmanager/ManagerPanel*',
	'com/splitmanager/PluginConfig*',
	'com/splitmanager/controllers/**',
	'com/splitmanager/models/Kill*',
	'com/splitmanager/models/PendingValue*',
	'com/splitmanager/models/PlayerMetrics*',
	'com/splitmanager/models/Transfer*',
	'com/splitmanager/utils/ChatStatusOverlay*',
	'com/splitmanager/utils/Utils*',
	'com/splitmanager/views/**'
]

test {
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	classDirectories.setFrom(files(classDirectories.files.collect {
		fileTree(dir: it, exclude: jacocoUnitTestExcludes)
	}))
	reports {
		xml.required = true
		html.required = true
	}
}

jacocoTestCoverageVerification {
	dependsOn test
	classDirectories.setFrom(files(classDirectories.files.collect {
		fileTree(dir: it, exclude: jacocoUnitTestExcludes)
	}))
	violationRules {
		rule {
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.90
			}
		}
	}
}

check.dependsOn jacocoTestCoverageVerification

tasks.register('run', JavaExec) {
	group = 'runelite'
	description = 'Run RuneLite with Auto Split Manager loaded in developer mode.'
	classpath = sourceSets.test.runtimeClasspath
	mainClass.set('com.example.ExamplePluginTest')
	args '--developer-mode', '--debug'
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.testRuntimeClasspath
	manifest {
		attributes('Main-Class': 'com.example.ExamplePluginTest', 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from sourceSets.test.output
	from {
		configurations.testRuntimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}
